WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
14761
Web Inspector leaks JS objects and DOM nodes
https://bugs.webkit.org/show_bug.cgi?id=14761
Summary
Web Inspector leaks JS objects and DOM nodes
John Moe
Reported
2007-07-24 22:01:48 PDT
Open any page, right click Inspect Element, close both windows. Lots of items will not be garbage collected (heap.numLiveObjects will be large). You can repeat and the number will continue to grow. InspectorController::m_scriptObject is never unprotected, because the call to JSObjectSetPrivate() in the InspectorController destructor causes unloading() to never call windowUnloading(). A Fix: In InspectorController.cpp, InspectorController destructor, move: m_client->inspectorDestroyed(); before: if (m_scriptContext) { and remove: m_client->closeWindow(); It seems to fix the leak and things seem to still work, but I've been playing with the WebKit code for less than a day, so who knows?
Attachments
Patch
(1.72 KB, patch)
2007-11-15 22:04 PST
,
Timothy Hatcher
mrowe
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Timothy Hatcher
Comment 1
2007-11-15 22:04:04 PST
Created
attachment 17312
[details]
Patch
Mark Rowe (bdash)
Comment 2
2007-11-15 22:12:46 PST
Comment on
attachment 17312
[details]
Patch r=me, but "Zero" should be "zero" in the changelog.
Timothy Hatcher
Comment 3
2007-11-15 22:16:17 PST
Landed in
r27839
.
http://trac.webkit.org/projects/webkit/changeset/27839
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug